DemoMetadata/unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Leasing_process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Вход в лизинг</fullName>
        </values>
        <values>
            <fullName>Досбор документов</fullName>
        </values>
        <values>
            <fullName>Закрыто и не реализовано</fullName>
        </values>
        <values>
            <fullName>ЛК Оплатил дилеру</fullName>
        </values>
        <values>
            <fullName>Обращение принято ЛК</fullName>
        </values>
        <values>
            <fullName>Оплачен аванс</fullName>
        </values>
        <values>
            <fullName>Отправлена заявка в ЛК</fullName>
        </values>
        <values>
            <fullName>Подписан договор с лк</fullName>
        </values>
        <values>
            <fullName>Принято ГСБ</fullName>
        </values>
        <values>
            <fullName>Сделка одобрена</fullName>
        </values>
        <values>
            <fullName>Успешно реализовано</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales_process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Выдача авто</fullName>
        </values>
        <values>
            <fullName>Закрыто и не реализовано</fullName>
        </values>
        <values>
            <fullName>Лизинг</fullName>
        </values>
        <values>
            <fullName>Оплата авто</fullName>
        </values>
        <values>
            <fullName>Подписание договора с ЛК</fullName>
        </values>
        <values>
            <fullName>Подписание договоров с Я%2EТакси</fullName>
        </values>
        <values>
            <fullName>Подтверждение скидки</fullName>
        </values>
        <values>
            <fullName>Поиск авто</fullName>
        </values>
        <values>
            <fullName>Пресейл</fullName>
        </values>
        <values>
            <fullName>Продажа</fullName>
        </values>
        <values>
            <fullName>Успешно реализовано</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Лизинговая компания</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Leasing_Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advance_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_month_turnover__c</fullName>
        <label>Среднемесячный оборот</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BCG_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BCG Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrower_Category__c</fullName>
        <label>Borrower Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Существующий парк</fullName>
                </value>
                <value>
                    <fullName>Новый парк без поручительства</fullName>
                </value>
                <value>
                    <fullName>Новый парк с поручительством</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Бренд</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chevrolet</fullName>
                </value>
                <value>
                    <fullName>Citroen</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Kia</fullName>
                </value>
                <value>
                    <fullName>Mitsubishi</fullName>
                </value>
                <value>
                    <fullName>Nissan</fullName>
                </value>
                <value>
                    <fullName>Renault</fullName>
                </value>
                <value>
                    <fullName>Skoda</fullName>
                </value>
                <value>
                    <fullName>Volkswagen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Бюджет</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <label>Тип бизнеса</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Новый парк</fullName>
                </value>
                <value>
                    <fullName>Старый парк</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_reason__c</fullName>
        <label>Причина закрытия</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Комментарий</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Страна</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_contract__c</fullName>
        <label>Дата контракта с Яндекс.Такси</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Оборудование</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Язык</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeasingType__c</fullName>
        <label>Тип лизинга</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Аннуитет</fullName>
                </value>
                <value>
                    <fullName>Сезонный</fullName>
                </value>
                <value>
                    <fullName>Балон</fullName>
                </value>
                <value>
                    <fullName>Нет</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_entity_entry__c</fullName>
        <label>Дата открытия юр. лица</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitoring agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_cars__c</fullName>
        <label>Количество авто</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_cars_in_request__c</fullName>
        <label>Количество авто в запросе</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityCity__c</fullName>
        <label>Город</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityProductQuantity__c</fullName>
        <label>Quantity</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityProductTotal_Price__c</fullName>
        <label>Total Price</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Parent</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product2__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parallel_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Параллельный контракт</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParticipatedInTheProgramme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Участвовал в программе</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>Продуктовая линейка</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductRollup__c</fullName>
        <formula>Opportunity_Product2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Продукт</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_date__c</fullName>
        <label>Дата регистрации</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_time__c</fullName>
        <label>Дати и время регистрации на вебинар</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Opportunity__c</fullName>
        <label>Sales Price</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_cars_seller__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used cars seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Utm_Campaign__c</fullName>
        <label>Utm_Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utm_Content__c</fullName>
        <label>Utm_Content</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utm_Source__c</fullName>
        <label>Utm_Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_duration__c</fullName>
        <label>Продолжительность просмотра</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Viewing_percent__c</fullName>
        <label>Процент просмотра</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Webinar_unique_link__c</fullName>
        <label>Ссылка на вебинар</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>YaTaxi_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Партнер Яндекс.Такси</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amo_UID__c</fullName>
        <label>amo UID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_take__c</fullName>
        <label>Дата получения авто</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>filled_the_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Заполнил форму</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ready_to_work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Готов сотрудничать</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm_term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Все расчеты КВ</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MT_leasing</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Account__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Leasing</value>
        </filters>
        <label>МТ лизинг</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Budget__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Account__c</columns>
        <columns>Sales_Price_Opportunity__c</columns>
        <columns>OPPORTUNITY.QUANTITY</columns>
        <columns>OpportunityProductTotal_Price__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>Мои сделки</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Leasing</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>mt_sales</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales_MT</value>
        </filters>
        <label>МТ продажа</label>
    </listViews>
    <recordTypes>
        <fullName>Leasing</fullName>
        <active>true</active>
        <businessProcess>Leasing_process</businessProcess>
        <label>МТ: Лизинг</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_MT</fullName>
        <active>true</active>
        <businessProcess>Sales_process</businessProcess>
        <label>МТ: Продажи</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>